@@ -14,6 +14,9 @@ Version 8.11 (Unreleased)
 - Allow user to resend email verification to primary email address.
 - Added additional detail to subscription help text when viewing a group.
 - Cleaner install UI when creating a new project.
+- Simplified management of secondary email addresses.
+- Fixed an issue where changing primary email address would remove the pre-existing verified email.
+- Disallow duplicating primary emails for users moving forward
 
 Schema Changes
 ~~~~~~~~~~~~~~
@@ -67,8 +70,6 @@ Version 8.9
 - Added weekly report emails behind feature flag.
 - Rebrand Rules as Alerts / Alert Rules.
 - Add frequency to Alerts.
-- Simplified management of secondary email addresses.
-- Fixed an issue where changing primary email address would remove the pre-existing verified email.
 
 Schema Changes
 ~~~~~~~~~~~~~~
